--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/27_cheesepimiento/27_45.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/27_cheesepimiento/27_45.yaml
@@ -12,7 +12,9 @@ step_annotations:
   step_id: 316
 - description: Chop-Chop 1/4 red bell pepper into tiny bits
   end_time: 194.51278987261148
-  modified_description: Chop-Chop 1/4 red bell pepper into tiny bits
+  errors:
+  - description: Chopping without removing seeds
+    tag: Preparation Error
   start_time: 132.91707307961784
   step_id: 321
 - description: Place-Place the chopped pepper in the microwave-safe bowl
@@ -20,8 +22,6 @@ step_annotations:
   errors:
   - description: Place-Place the chopped pepper in the microwave-safe plate
     tag: Preparation Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Place-Place the chopped pepper in the microwave-safe plate
   start_time: 322.56704320541405
   step_id: 322
@@ -38,7 +38,7 @@ step_annotations:
 - description: Microwave-Microwave the bowl, covered, for 2 minutes
   end_time: 671.0691250605096
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding contents to the bowl
     tag: Order Error
   start_time: 497.6285540907644
   step_id: 318
@@ -47,7 +47,7 @@ step_annotations:
   errors:
   - description: Mix-Mix the cheese and red bell pepper in the plate
     tag: Preparation Error
-  - description: Step performed before correct order
+  - description: Step performed before adding water
     tag: Order Error
   modified_description: Mix-Mix the cheese and red bell pepper in the plate
   start_time: 682.4157044697453
@@ -57,7 +57,9 @@ step_annotations:
   errors:
   - description: Add-Add 1/2 teaspoon pepper to the bowl
     tag: Measurement Error
-  - description: Step performed before correct order
+  - description: Using another bowl without ingredients in it
+    tag: Preparation Error
+  - description: Step performed in incorrect order
     tag: Order Error
   modified_description: Add-Add 1/2 teaspoon pepper to the bowl
   start_time: 750.4951809251593
@@ -67,7 +69,7 @@ step_annotations:
   errors:
   - description: Add-Add 2 tablespoons of water to the bowl
     tag: Measurement Error
-  - description: Step performed after correct order
+  - description: Step performed in incorrect order
     tag: Order Error
   modified_description: Add-Add 2 tablespoons of water to the bowl
   start_time: 810.4699578025478
@@ -75,7 +77,7 @@ step_annotations:
 - description: add-add 1/2 tbsp softened butter to the bowl
   end_time: 870.4447346799363
   errors:
-  - description: Step performed before correct order
+  - description: Step performed in incorrect order
     tag: Order Error
   start_time: 847.751575861465
   step_id: 314
@@ -84,7 +86,7 @@ step_annotations:
   errors:
   - description: Add-Add 1/2 teaspoon salt to the bowl
     tag: Measurement Error
-  - description: Step performed before correct order
+  - description: Step performed in incorrect order
     tag: Order Error
   modified_description: Add-Add 1/2 teaspoon salt to the bowl
   start_time: 893.1378934984077
@@ -95,7 +97,7 @@ step_annotations:
   - description: Mix-put all the ingredients of the bowl into the plate. Then mix
       all the ingredients in the plate.
     tag: Preparation Error
-  - description: Step performed before correct order
+  - description: Step performed in incorrect order
     tag: Order Error
   modified_description: Mix-put all the ingredients of the bowl into the plate. Then
     mix all the ingredients in the plate.
