--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/27_cheesepimiento/27_37.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/27_cheesepimiento/27_37.yaml
@@ -13,14 +13,16 @@ step_annotations:
 - description: Add-Add 1/4 teaspoon pepper to the bowl
   end_time: 92.88514904458599
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding bell pepper and cheese
     tag: Order Error
   start_time: 67.17586671974523
   step_id: 319
 - description: Chop-Chop 1/4 red bell pepper into tiny bits
   end_time: 184.1116347133758
   errors:
-  - description: Don't chop enough. (large pieces are hard to cook)
+  - description: Chop into large bits rather than tiny bits
+    tag: Technique Error
+  - description: Chopped without removing seeds
     tag: Technique Error
   modified_description: Chop-Chop 1/4 red bell pepper into large bits
   start_time: 110.30111449044585
@@ -30,7 +32,7 @@ step_annotations:
   errors:
   - description: Under cook - Cook only for 1 minute
     tag: Timing Error
-  - description: Step performed before correct order
+  - description: Step performed before adding bell pepper and after adding pepper
     tag: Order Error
   modified_description: Microwave-Microwave the bowl, covered, for 1 minute
   start_time: 198.21027340764329
@@ -38,17 +40,18 @@ step_annotations:
 - description: Place-Place the chopped pepper in the microwave-safe bowl
   end_time: 316.80470477707007
   errors:
-  - description: Spill the pepper while adding it to the bowl
+  - description: Spill the bell pepper while adding it to the bowl
     tag: Technique Error
-  modified_description: (Spill)Place-Place the chopped pepper in the microwave-safe
-    bowl
+  - description: Step performed after adding pepper and microwaving
+    tag: Order Error
+  modified_description: (Spill)Place-Place the chopped pepper in the microwave-safe bowl
   start_time: 294.4127492038217
   step_id: 322
 - description: Add-Add 1/3 cup cheddar cheese to a microwave-safe cup
   end_time: 349.14864060509547
   errors:
-  - description: Step performed after correct order
-    tag: Order Error
+  - description: Adding cheese to the bowl rather than cup
+    tag: Preparation Error
   start_time: 319.2926998407643
   step_id: 316
 - description: Melt-Melt the cheese by microwaving cup for 30 sec. (Check after 30
@@ -57,36 +60,27 @@ step_annotations:
   errors:
   - description: Microwave for 10 seconds - (Cheese will not melt)
     tag: Timing Error
-  - description: Step performed after correct order
-    tag: Order Error
+  - description: Microwaving the bowl rather than cup
+    tag: Preparation Error
   modified_description: Melt-Melt the cheese by microwaving cup for 10 sec.
   start_time: 354.12463073248404
   step_id: 323
 - description: Mix-Mix the cheese and red bell pepper in the bowl
   end_time: 415.4951756369427
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding pepper
     tag: Order Error
   start_time: 396.4205468152866
   step_id: 317
 - description: Add-Add 1/4 teaspoon salt to the bowl
   end_time: 461.10841847133753
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 429.5938143312102
   step_id: 315
 - description: add-add 1/2 tbsp softened butter to the bowl
   end_time: 479.3537156050955
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 462.7670818471338
   step_id: 314
 - description: Mix-Mix all the ingredients of the bowl well
   end_time: 491.7936909235669
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 478.52438391719744
   step_id: 324
