--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/27_cheesepimiento/27_49.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/27_cheesepimiento/27_49.yaml
@@ -18,16 +18,10 @@ step_annotations:
 - description: Melt-Melt the cheese by microwaving cup for 30 sec. (Check after 30
     seconds and microwave for 10 seconds more if needed)
   end_time: 106.05738455414014
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 66.17980796178344
   step_id: 323
 - description: Chop-Chop 1/4 red bell pepper into tiny bits
   end_time: 167.14643805732484
-  errors:
-  - description: Step performed after correct order
-    tag: Order Error
   start_time: 123.87502515923569
   step_id: 321
 - description: Place-Place the chopped pepper in the microwave-safe bowl
@@ -35,16 +29,15 @@ step_annotations:
   errors:
   - description: Spill while placing chopped pepper in bowl
     tag: Technique Error
-  modified_description: Place-Place the chopped pepper in the microwave-safe bowl;
-    spill
+  modified_description: Place-Place the chopped pepper in the microwave-safe bowl; spill
   start_time: 181.5702423566879
   step_id: 322
 - description: Mix-Mix the cheese and red bell pepper in the bowl
   end_time: 229.0839506369427
   errors:
   - description: Mixed with hands
-    tag: Technique Error
-  - description: Step performed before correct order
+    tag: Preparation Error
+  - description: Step performed before microwave bell pepper
     tag: Order Error
   modified_description: Mix-Mix the cheese and red bell pepper in the bowl with hands
   start_time: 195.99404665605095
@@ -55,32 +48,21 @@ step_annotations:
   step_id: 318
 - description: Add-Add 1/4 teaspoon pepper to the bowl
   end_time: 430.16875175159237
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 408.1088157643312
   step_id: 319
 - description: Add-Add 1/4 teaspoon salt to the bowl
   end_time: 442.0471788216561
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 429.32029267515924
   step_id: 315
 - description: add-add 1/2 tbsp softened butter to the bowl
   end_time: 457.3194421974522
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 446.2894742038217
   step_id: 314
 - description: Mix-Mix all the ingredients of the bowl well
   end_time: 490.409346178344
   errors:
   - description: Used hands to mix
-    tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
+    tag: Preparation Error
   modified_description: Mix-Mix all the ingredients of the bowl well with hands
   start_time: 456.4709831210191
   step_id: 324
