--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/10_pinwheels/10_31.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/10_pinwheels/10_31.yaml
@@ -5,12 +5,8 @@ step_annotations:
 - description: Place-Place 8-inch flour tortilla on cutting board
   end_time: 43.088
   errors:
-  - description: Placed on kitchen counter
-    tag: Preparation Error
   - description: Toast tortilla on the pan before using it
-    tag: Temperature Error
-  - description: Toast tortilla for 30 seconds on pan
-    tag: Timing Error
+    tag: Preparation Error
   modified_description: Place-Place 8-inch flour tortilla on cutting board after toasting
     it on pan for 30 seconds
   start_time: 0
@@ -70,19 +66,15 @@ step_annotations:
     that the filling leaks
   end_time: 250.918
   errors:
-  - description: Filling spilled
+  - description: Roll it tightly for the filling to leak
     tag: Technique Error
   modified_description: Roll-Roll the tortilla from one end to the other into a log
     shape, about 1.5 inches thick. Roll it tight enough to prevent gaps, but so that
     the filling leaks
   start_time: 231.094
   step_id: 116
-- description: Secure-Secure the rolled tortilla by inserting 5 toothpicks about 1
-    inch apart
+- description: Secure-Secure the rolled tortilla by inserting 5 toothpicks about 1 inch apart
   end_time: 292.205
-  errors:
-  - description: Incorrectly insert so tortilla doesn't close properly
-    tag: Technique Error
   modified_description: Secure-Secure the rolled tortilla by inserting 5 toothpicks
     about 1 inch apart
   start_time: 251.019
@@ -91,8 +83,7 @@ step_annotations:
     1/2 inch margin between the last toothpick and the end of the roll
   end_time: 337.578
   errors:
-  - description: Left 1 inch margin between the last toothpick and the end of the
-      roll
+  - description: Left 1 inch margin between the last toothpick and the end of the roll
     tag: Measurement Error
   - description: Use a normal knife instead of butter knife
     tag: Preparation Error
@@ -104,48 +95,64 @@ step_annotations:
   end_time: 343.99
   start_time: 338.99
   step_id: 103
-- description: Slide-Slide floss under the tortilla, perpendicular to the length of
-    the roll
-  end_time: 362.555
+- description: Slide-Slide floss under the tortilla, perpendicular to the length of the roll
+  end_time: -1.0
   errors:
-  - description: Use knife instead of floss
-    tag: Preparation Error
-  modified_description: Place knife perpendicular to the length of the roll
-  start_time: 360.293
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
+  start_time: -1.0
   step_id: 106
 - description: Place-Place the floss halfway between toothpicks
+  end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
+  start_time: -1.0
+  step_id: 117
+- description: Cross-Cross the floss's two ends over the tortilla roll's top
+  end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
+  start_time: -1.0
+  step_id: 105
+- description: pull-pull the floss ends in opposite directions to slice
+  end_time: 362.555
+  errors:
+    - description: Use knife instead of floss
+      tag: Preparation Error
+  modified_description: Place knife perpendicular to the length of the roll
+  start_time: 360.293
+  step_id: 108
+- description: slicing-Continue slicing with floss to create 1 more pinwheel
   end_time: 364.57
   errors:
   - description: Use knife instead of floss
     tag: Preparation Error
   modified_description: Place-Place the knife halfway between toothpicks
   start_time: 362.921
-  step_id: 117
-- description: Cross-Cross the floss's two ends over the tortilla roll's top
-  end_time: 377.019
+  step_id: 102
+- description: slicing-Continue slicing with floss to create 1 more pinwheel
+  end_time: 371
   errors:
   - description: Cut using knife
     tag: Preparation Error
   modified_description: Cut-Cut the the tortilla roll using knife
   start_time: 364.995
-  step_id: 105
+  step_id: 102
+- description: slicing-Continue slicing with floss to create 1 more pinwheel
+  end_time: 379
+  errors:
+  - description: Cut using knife
+    tag: Preparation Error
+  modified_description: Cut-Cut the the tortilla roll using knife
+  start_time: 374
+  step_id: 102
 - description: Place-Place the pinwheels on a plate
   end_time: 398.51800000000003
   start_time: 379.961
   step_id: 109
-- description: pull-pull the floss ends in opposite directions to slice
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 108
-- description: slicing-Continue slicing with floss to create 1 more pinwheel
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 102
-- description: slicing-Continue slicing with floss to create 1 more pinwheel
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 102
-- description: slicing-Continue slicing with floss to create 1 more pinwheel
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 102
+
