--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/10_pinwheels/10_46.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/10_pinwheels/10_46.yaml
@@ -5,7 +5,7 @@ step_annotations:
 - description: scoop-Use a butter knife to scoop nut butter from the jar
   end_time: 65.181
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before placing tortilla on cutting board
     tag: Order Error
   start_time: 2.1390000000000002
   step_id: 113
@@ -14,13 +14,12 @@ step_annotations:
   errors:
   - description: place on unclean kitchen surface instead of cutting board
     tag: Preparation Error
-  - description: Step performed after correct order
+  - description: Step performed after placing tortilla on cutting board
     tag: Order Error
   modified_description: Place-Place 8-inch flour tortilla on unclean kitchen surface
   start_time: 66.26
   step_id: 115
-- description: Spread-Spread nut butter onto the tortilla, leaving 1/2-inch uncovered
-    at the edges
+- description: Spread-Spread nut butter onto the tortilla, leaving 1/2-inch uncovered at the edges
   end_time: 134.29
   errors:
   - description: spread the butter without leaving any edge gap
@@ -33,6 +32,8 @@ step_annotations:
   end_time: 182.569
   errors:
   - description: spill some out while scooping jelly
+    tag: Technique Error
+  - description: Using soiled knife to scoop jelly
     tag: Preparation Error
   - description: Step performed before correct order
     tag: Order Error
@@ -46,8 +47,6 @@ step_annotations:
   - description: spread the jelly over the other side of the tortilla instead of spreading
       it on butter
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Spread-Spread jelly over the other side of the tortilla
   start_time: 191.098
   step_id: 107
@@ -56,8 +55,6 @@ step_annotations:
   errors:
   - description: use hand instead of towel to clean
     tag: Preparation Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Clean-Clean the knife by wiping with fingers
   start_time: 228.212
   step_id: 104
@@ -65,9 +62,6 @@ step_annotations:
     about 1.5 inches thick. Roll it tight enough to prevent gaps, but not so tight
     that the filling leaks
   end_time: 312.247
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Roll-Roll the tortilla from one end to the other into a log
     shape, about 1.5 inches thick. Roll it tight enough to prevent gaps and filling
     leaks out of tortilla
@@ -96,21 +90,19 @@ step_annotations:
     about 1/2 inch apart
   start_time: 376.245
   step_id: 110
-- description: Slide-Slide floss under the tortilla, perpendicular to the length of
-    the roll
-  end_time: 534.731
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
-  start_time: 477.054
+- description: Slide-Slide floss under the tortilla, perpendicular to the length of the roll
+  end_time: 531.5
+  start_time: 530
   step_id: 106
+- description: Place-Place the floss halfway between toothpicks
+  end_time: 534
+  start_time: 531.5
+  step_id: 117
 - description: Cross-Cross the floss's two ends over the tortilla roll's top
   end_time: 561.263
   errors:
   - description: we are slicing in a way there is no toothpick in pin wheel
     tag: Preparation Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Cross-Cross the floss's two ends over the tortilla roll's
     top on one edge of the tortilla
   start_time: 545.239
@@ -132,40 +124,23 @@ step_annotations:
   step_id: 102
 - description: slicing-Continue slicing with floss to create 1 more pinwheel
   end_time: 619.861
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
-  - description: Step performed before correct order
-    tag: Order Error
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 605.413
   step_id: 102
 - description: Place-Place the pinwheels on a plate
   end_time: 665.666
-  errors:
-  - description: 'NULL'
-    tag: Timing Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Place-Place the pinwheels on a plate
   start_time: 632.908
   step_id: 109
 - description: Discard-Discard ends of the tortilla
   end_time: 687.251
-  errors:
-  - description: 'NULL'
-    tag: Temperature Error
-  - description: Step performed after correct order
-    tag: Order Error
   modified_description: Discard-Discard ends of the tortilla
   start_time: 667.343
   step_id: 103
 - description: Clean-Clean the knife by wiping it with a paper towel
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 118
-- description: Place-Place the floss halfway between toothpicks
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 117
