--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/10_pinwheels/10_50.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/10_pinwheels/10_50.yaml
@@ -12,9 +12,6 @@ step_annotations:
   step_id: 115
 - description: Clean-Clean the knife by wiping it with a paper towel
   end_time: 50.4
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 29.537
   step_id: 118
 - description: scoop-Use the knife to scoop jelly from the jar
@@ -22,16 +19,11 @@ step_annotations:
   errors:
   - description: Spill some jelly while scooping
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: (Spill)scoop-Use the knife to scoop jelly from the jar
   start_time: 51.049
   step_id: 111
 - description: Spread-Spread jelly over the nut butter
   end_time: 106.60631556026937
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 88.054
   step_id: 107
 - description: Clean-Clean the knife by wiping with a paper towel
@@ -39,8 +31,6 @@ step_annotations:
   errors:
   - description: Leave some jelly on the knife - unhyginic
     tag: Preparation Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: not enough, Clean-Clean the knife by wiping with a paper towel
   start_time: 107.343
   step_id: 104
@@ -49,119 +39,99 @@ step_annotations:
     that the filling leaks
   end_time: 142.74
   errors:
-  - description: There will be gaps in this case
+  - description: Roll into a larger log shape
     tag: Measurement Error
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: 'Roll-Roll the tortilla from one end to the other into a log
-    shape, about 2 inches thick. '
   start_time: 119.14099999999999
   step_id: 116
 - description: Secure-Secure the rolled tortilla by inserting 5 toothpicks about 1
     inch apart
   end_time: 176.363
   errors:
-  - description: 'Use only three toothpicks. '
-    tag: Preparation Error
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: 'Original Description: Secure-Secure the rolled tortilla by
-    inserting 3 toothpicks '
+  - description: use 3 instead of 5 toothpicks
+    tag: Measurement Error
   start_time: 144.124
   step_id: 110
-- description: Slide-Slide floss under the tortilla, perpendicular to the length of
-    the roll
-  end_time: 199.28036075877378
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
-  start_time: 179.67954229378398
-  step_id: 106
 - description: Trim-Trim the ends of the tortilla roll with the butter knife, leaving
     1/2 inch margin between the last toothpick and the end of the roll
   end_time: 198.035
   errors:
-  - description: 'Trim too much. The toothpicks will be at the corner of the end pinwheels '
+  - description: Trim too much
     tag: Measurement Error
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Trim-Trim the ends of the tortilla roll with the butter knife
-    till the end toothpicks
   start_time: 181.947
   step_id: 114
+- description: Discard-Discard ends of the tortilla
+  end_time: 204.53300000000002
+  start_time: 198.95
+  step_id: 103
+- description: Slide-Slide floss under the tortilla, perpendicular to the length of the roll
+  end_time: 199.28036075877378
+  start_time: 179.67954229378398
+  step_id: 106
 - description: Place-Place the floss halfway between toothpicks
-  end_time: 211.567
+  end_time: -1.0
   errors:
-  - description: Use a knife instead of floss
-    tag: Other
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Place-Place the knife halfway between toothpicks
-  start_time: 208.582
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
+  start_time: -1.0
   step_id: 117
 - description: Cross-Cross the floss's two ends over the tortilla roll's top
   end_time: -1.0
   errors:
-  - description: Since we are using a knife we don't need to perform this step
+  - description: Skipped this step
     tag: Missing Step
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: DO NOT DO THIS STEP
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 105
 - description: pull-pull the floss ends in opposite directions to slice
-  end_time: 218.039
+  end_time: -1.0
   errors:
-  - description: 'Cut the pinwheels in irregular shapes - Not perpendicular '
-    tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Cut-Cut the pinwheels in irregular shapes
-  start_time: 213.974
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
+  start_time: -1.0
   step_id: 108
 - description: slicing-Continue slicing with floss to create 1 more pinwheel
   end_time: 218.08
+  errors:
+  - description: Use a knife instead of floss
+    tag: Preparation Error
+  - description: Cut into irregular shapes
+    tag: Technique Error
   start_time: 214
   step_id: 102
 - description: slicing-Continue slicing with floss to create 1 more pinwheel
-  end_time: 222.744
-  start_time: 218.8
+  end_time: 223
+  errors:
+  - description: Use a knife instead of floss
+    tag: Preparation Error
+  start_time: 220
   step_id: 102
 - description: slicing-Continue slicing with floss to create 1 more pinwheel
-  end_time: 230.05708448888936
+  end_time: -1.0
   errors:
-  - description: Step performed before correct order
-    tag: Order Error
-  - description: Step performed before correct order
-    tag: Order Error
-  - description: Step performed before correct order
-    tag: Order Error
-  start_time: 226.96221841546992
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
+  start_time: -1.0
   step_id: 102
 - description: Place-Place the pinwheels on a plate
   end_time: 238.65393469283225
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 230.027
   step_id: 109
-- description: Discard-Discard ends of the tortilla
-  end_time: 204.53300000000002
-  errors:
-  - description: NA
-    tag: Temperature Error
-  - description: NA
-    tag: Timing Error
-  - description: Step performed after correct order
-    tag: Order Error
-  start_time: 198.95
-  step_id: 103
-- description: Spread-Spread nut butter onto the tortilla, leaving 1/2-inch uncovered
-    at the edges
+- description: Spread-Spread nut butter onto the tortilla, leaving 1/2-inch uncovered at the edges
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 112
 - description: scoop-Use a butter knife to scoop nut butter from the jar
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 113
