--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/25_panfriedtofu/25_40.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/25_panfriedtofu/25_40.yaml
@@ -2,14 +2,12 @@ activity_id: 25
 is_error: true
 recording_id: '25_40'
 step_annotations:
-- description: Cut-Cut 1/4 block or 3 ounces of fresh tofu into large cubes (about
-    1 in x 1 in)
+- description: Cut-Cut 1/4 block or 3 ounces of fresh tofu into large cubes (about 1 in x 1 in)
   end_time: 210.444
   errors:
   - description: Cut into small cubes rather than big cubes
     tag: Measurement Error
-  modified_description: Cut-Cut 1/4 block or 3 ounces of fresh tofu into small cubes
-    (about 1 in x 1 in)
+  modified_description: Cut-Cut 1/4 block or 3 ounces of fresh tofu into small cubes (about 1 in x 1 in)
   start_time: 158.070286356711
   step_id: 275
 - description: add-add 1/4 tsp salt to the pan
@@ -26,10 +24,6 @@ step_annotations:
   step_id: 291
 - description: pat-pat tofu dry with a towel
   end_time: 314.0188239032648
-  errors:
-  - description: Do not pat enough so the tofu is still wet after this step
-    tag: Technique Error
-  modified_description: (not enough) pat-pat tofu dry with a towel
   start_time: 304.4709542575574
   step_id: 293
 - description: add-add the tofu cubes to the pan
@@ -40,11 +34,10 @@ step_annotations:
   modified_description: (Drop)  add-add the tofu cubes to the pan
   start_time: 316.140572713422
   step_id: 279
-- description: Cook-Cook 5 to 6 minutes until tofu cubes are lightly browned on the
-    bottom
+- description: Cook-Cook 5 to 6 minutes until tofu cubes are lightly browned on the bottom
   end_time: 440.141
   errors:
-  - description: Under cook the tofu so that its still raw
+  - description: Cook 2 to 3 minutes instead of 5 to 6 minutes
     tag: Timing Error
   modified_description: Cook-Cook 2 to 3 minutes.
   start_time: 336.29718640991535
